temple authority module